src/components/ui/nav/index.css
@import "../../../app/globals.css";

@layer components {
    .nav {
        @apply w-full border-y border-(--semigrid) sticky top-0 z-10;
        &:before {
            content: '';
            @apply absolute top-0 left-0 right-0 bottom-0 bg-(--bg-default)/70 backdrop-blur-2xl;
        }


        .nav__layout {
            @apply w-full relative z-10;
            @apply flex justify-between py-4 items-center;
        }

        .nav__brand {
            @apply -translate-x-6;
            span {
                @apply text-accent-500 px-1 font-bold;
            }
        }

        .nav__link {
            @apply text-(--fg-default);

            &:before {
                content: '#';
                @apply relative right-1 opacity-0 transition-all;
            }

            &:hover {
                @apply text-(--fg-default)/80;
                &:before {
                    @apply text-accent-500 opacity-100;
                }
            }

        }

        .nav__link.internal {
            @apply hidden;
            @apply xl:flex;
        }

        .nav__list {
            @apply hidden;
            @apply xl:flex justify-between gap-2 xl:gap-6 items-center self-center ml-auto mr-4;

        }

        .nav__buttons {
            @apply grid grid-cols-3 xl:grid-cols-2 gap-2;
        }
    }

    .nav__drawer-toggler {
        @apply xl:hidden!;
        /**Fix this thing, perhaps remove from link-button css the "flex" prop*/
    }

    .nav__drawer {
        @apply fixed p-4 py-4 transform translate-x-0 right-0 transition-all;
        @apply bg-(--bg-default) top-0 z-10 border border-(--semigrid) flex flex-col items-end;

        &.open {
            @apply xl:translate-x-full;
        }

        &.close {
            @apply translate-x-full;
        }
    }

}

